src/test/ui/hygiene/assoc_item_ctxt.stderr
error[E0407]: method `method` is not a member of trait `Tr`
  --> $DIR/assoc_item_ctxt.rs:35:13
   |
LL |             fn method() {}
   |             ^^^------^^^^^
   |             |  |
   |             |  help: there is an associated function with a similar name: `method`
   |             not a member of trait `Tr`
...
LL |     mac_trait_impl!();
   |     ------------------ in this macro invocation
   |
   = note: this error originates in the macro `mac_trait_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0046]: not all trait items implemented, missing: `method`
  --> $DIR/assoc_item_ctxt.rs:34:9
   |
LL |         fn method();
   |         ------------ `method` from trait
...
LL |         impl Tr for u8 {
   |         ^^^^^^^^^^^^^^ missing `method` in implementation
...
LL |     mac_trait_impl!();
   |     ------------------ in this macro invocation
   |
   = note: this error originates in the macro `mac_trait_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0046, E0407.
For more information about an error, try `rustc --explain E0046`.
